--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,14 +6,18 @@
   font-family: 'Dosis', sans-serif;
   font-weight: 900;
   letter-spacing: 2px;
-  width: 60%;
-  height: 550px;
+  width: 50%;
+  height: 530px;
   margin: 0 auto;
   padding: 50px ;
   background-color: white;
   box-shadow: 2px 2px 10px 0 rgba(51, 51, 51, 0.2);
   position: relative;
+  z-index: 100;
 
+}
+.myBox h1{
+  font-size: 50px;
 }
 /* form  */
 .form_form{
@@ -126,7 +130,7 @@
   .modal_button{
     position: absolute;
     bottom: 15%;
-    left: 30%;
+    left: 35%;
   }
   .modal_close{
     position: absolute;
