--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1,6 +1,10 @@
 
 .myOutput{
     background-color: #E8E8E8; 
+    overflow: auto !important;
+    padding-bottom: 200px;
+    position: relative;
+  
 }
 .listNumber{
     margin-top: 30px;
@@ -50,10 +54,12 @@
 }
 /* OutputItem */
 .myNumber{
-    z-index: 1000;
-    position: relative;
+    /* z-index: 1000;
+    position: relative; */
+    
 }
 .myNumber span{
+    
     position: relative;
     background-color: rgb(85, 84, 84);
     color: white;
@@ -63,4 +69,23 @@
     box-shadow: 2px 2px 10px 0 rgba(51, 51, 51, 0.2);
     transition: all 0.5s;
     margin-right: 20px; 
+}
+/* Scrollbar */
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar
+{
+	width: 0px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(24, 22, 22);
 }
